--- a/task_1.html
+++ b/task_1.html
@@ -10,7 +10,7 @@
         <img src="/src/images/logo.svg" alt="logo" height="30">
         <nav class="menu"> <!-- Меню -->
             <ul>
-                <li><a href="task_3.html">Task 3</a></li>
+                <li><a href="task_3-4.html">Task 3-4</a></li>
                 <li><a href="task_2.html">Task 2</a></li>
                 <li><a href="task_1.html">Task 1</a></li>
             </ul>
@@ -72,7 +72,7 @@
 <footer>
     <nav class="menu"> <!-- Меню -->
         <ul>
-            <li><a href="task_3.html">Task 3</a></li>
+            <li><a href="task_3-4.html">Task 3-4</a></li>
             <li><a href="task_2.html">Task 2</a></li>
             <li><a href="task_1.html">Task 1</a></li>
         </ul>
