--- a/task_3-4.html
+++ b/task_3-4.html
@@ -10,7 +10,7 @@
         <img src="/src/images/logo.svg" alt="logo" height="30">
         <nav class="menu" role="navigation"> <!-- Меню -->  <!-- Приклад використання role -->
             <ul>
-                <li><a href="task_3.html" arial-label="Go to task 3 page">Task 3</a></li> <!-- Приклад використання arial-label -->
+                <li><a href="task_3-4.html" arial-label="Go to task 3 page">Task 3-4</a></li> <!-- Приклад використання arial-label -->
                 <li><a href="task_2.html">Task 2</a></li>
                 <li><a href="task_1.html">Task 1</a></li>
             </ul>
@@ -56,7 +56,7 @@
     <footer>
         <nav class="menu"> <!-- Меню -->
             <ul>
-                <li><a href="task_3.html" arial-label="Go to task 3 page" tabindex="1">Task 3</a></li> <!-- Приклад використання tabindex -->
+                <li><a href="task_3-4.html" arial-label="Go to task 3 page" tabindex="1">Task 3-4</a></li> <!-- Приклад використання tabindex -->
                 <li><a href="task_2.html" arial-label="Go to task 2 page">Task 2</a></li>
                 <li><a href="task_1.html" arial-label="Go to task 1 page">Task 1</a></li>
             </ul>
