--- a/task_1.html
+++ b/task_1.html
@@ -14,7 +14,7 @@
                 <li><a href="task_2.html">Task 2</a></li>
                 <li><a href="task_1.html">Task 1</a></li>
             </ul>
-          </nav>
+        </nav>
     </header>
     <main>
         <h1>Our Blog</h1>
@@ -24,8 +24,6 @@
                 <p>Autors name</p>
                 <section>
                     <h3>Introduction</h3>
-                </section>
-                <section>
                     <p>Main Content</p>
                     <ul>
                         <li>Mark 1</li>
@@ -40,8 +38,6 @@
                 <p>Autors name</p>
                 <section>
                     <h3>Introduction</h3>
-                </section>
-                <section>
                     <p>Main Content</p>
                     <ul>
                         <li>Mark 1</li>
@@ -56,8 +52,6 @@
                 <p>Autors name</p>
                 <section>
                     <h3>Introduction</h3>
-                </section>
-                <section>
                     <p>Main Content</p>
                     <ul>
                         <li>Mark 1</li>
@@ -70,14 +64,12 @@
         </section>        
     </main> 
 <footer>
-    <nav class="menu"> <!-- Меню -->
         <ul>
             <li><a href="task_3-4.html">Task 3-4</a></li>
             <li><a href="task_2.html">Task 2</a></li>
             <li><a href="task_1.html">Task 1</a></li>
         </ul>
-      </nav>
-    <p>LOGO ©2024. All rights reserved.</p>
+      <span>LOGO ©2024. All rights reserved.</span>
 </footer>
 </body>
 </html>
