--- a/task_2.html
+++ b/task_2.html
@@ -39,14 +39,12 @@
         </figure>
     </section>
     <footer>
-        <nav class="menu"> <!-- Меню -->
             <ul>
                 <li><a href="task_3-4.html">Task 3-4</a></li>
                 <li><a href="task_2.html">Task 2</a></li>
                 <li><a href="task_1.html">Task 1</a></li>
             </ul>
-          </nav>
-        <p>LOGO ©2024. All rights reserved.</p>
+          <span>LOGO ©2024. All rights reserved.</span>
     </footer>
 </body>
 </html>
