--- a/task_3-4.html
+++ b/task_3-4.html
@@ -54,14 +54,12 @@
         </figure>
     </aside>
     <footer>
-        <nav class="menu"> <!-- Меню -->
             <ul>
                 <li><a href="task_3-4.html" arial-label="Go to task 3 page" tabindex="1">Task 3-4</a></li> <!-- Приклад використання tabindex -->
                 <li><a href="task_2.html" arial-label="Go to task 2 page">Task 2</a></li>
                 <li><a href="task_1.html" arial-label="Go to task 1 page">Task 1</a></li>
             </ul>
-          </nav>
-        <p>LOGO ©2024. All rights reserved.</p>
+        <span>LOGO ©2024. All rights reserved.</span>
     </footer>
 </body>
 </html>
