--- a/task_10.html
+++ b/task_10.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap" rel="stylesheet">
-    <link href="./src/styles.css" rel="stylesheet" />
+    <link href="./src/scss/styles.scss" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="src/images/favicon-32x32.svg">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Scripts -->
@@ -67,7 +67,7 @@
         <div class="thirdScreenTextContent"> 
             <h2 class="titleThirdScreen">Stand out to the right audience</h2>
             <p class="textThirdScreen">Using a collaborative formula of designers, researchers, photographers, videographers and copywriters, we'll build and extend your brand in digital places.</p>
-            <a href="url" class="link linkPink">learn more</a>
+            <a href="url" class="link linkPink"> <span>learn more</span> </a>
         </div>
         <img src="src/images/desktop/image-stand-out.jpg" alt="Glass on rose background" class="thirdScreenImageContent">
     </section>
